    the module file name when the first argument of the use_module/2 directive
    is a compound term (as usual when using library notation).

    Updated the ECLiPSe, SICStus Prolog, SWI-Prolog, and YAP config files in
    order to preprocess the use_module/2 directive, converting the module file
    name into the module name.


2.39.1 - March 31, 2010

    Updated the Logtalk compiler and runtime to support calls to the built-in
    predicates threaded_peek/2 and threaded_exit/2 where the second argument
    (thread tag) is only instantiated at runtime. Updated the exception term
    thrown by threaded_exit/2 when the thread goal don't exist to use error/3
    instead of error/2.

    Updated the implementation of the uses/2 directive in order to allow
    safe use of the declared shortcuts at runtime.

    Corrected a bug when using the use_module/2 directive that resulted in
    a performance penalty when calling module predicates.

    Updated the Logtalk compiler to warn the user when finding deprecated
    directives.

    Updated the Logtalk compiler to recognize "prolog_compatible_version"
    and "tabling" as valid flags.

    Updated the Logtalk compiler to compile settings files with the compiler
    flag "altdirs" turned off in order to avoid problems with directory
    permissions for back-end Prolog compilers, such as Ciao and XSB, which
    require the first run of Logtalk to be made by an administrative user.

    Corrected a bug in the Logtalk compiler that forced recompilation of
    source files when the "smart_compilation" flag was set to "on".

    Corrected an erroneous compiler warning when reporting referenced but
    unknown objects when using the {Object}::Message notation. Thanks to
    Parker Jones for the bug report.

    Corrected a bug in the <</2 control construct where errors would be
    reported without an error/3 wrapper. Thanks to Parker Jones for the
    bug report.
